made chages to animal

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 					<h4>My hometown is Rocky Mount.</h4>
 					<h4>My favorite color is green.</h4>
 					<h4>My favorite food is sweets.</h4>
-					<h4>If I could be any animal, I would be a tiger.</h4>
+					<h4>If I could be any animal, I would be a a killer whale.</h4>
 			</div>
 		  </body>
 		</html>
